--- a/shipping.html
+++ b/shipping.html
@@ -208,25 +208,25 @@
                         </div>
                          <form class="mt-3">
                           <div class="form-row col-12">
-                            <div class="form-group col-4">
+                            <div class="form-group col-8 col-md-4">
                               <label for="inputEmail4">Country</label>
                               <input type="email" class="form-control" id="inputEmail4">
                             </div>
-                            <div class="form-group col-4">
+                            <div class="form-group col-8 col-md-4">
                               <label for="inputPassword4">City</label>
-                              <input type="password" class="form-control" id="inputPassword4">
+                              <input type="text" class="form-control" id="inputPassword4">
                             </div>
                           </div>
-                          <div class="form-group col-4">
+                          <div class="form-group col-8 col-md-4">
                             <label for="inputAddress">Address</label>
                             <input type="text" class="form-control" id="inputAddress">
                           </div>
-                          <div class="form-group col-4">
+                          <div class="form-group col-8 col-md-4">
                             <label for="inputAddress2">Address 2 (If you have)</label>
                             <input type="text" class="form-control" id="inputAddress2">
                           </div>
                           <div class="form-row col-12">
-                            <div class="form-group col-4">
+                            <div class="form-group col-8 col-md-4">
                               <label for="inputCity">House</label>
                               <input type="text" class="form-control" id="inputCity">
                             </div>
